mdapipkg/objects/Cvent_Order_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Action_Date__c</fullName>
        <label>Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Credit_Formula__c</fullName>
        <formula>Amount__c * (-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Credit Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Due__c</fullName>
        <label>Amount Due</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Greater_Than_Zero__c</fullName>
        <formula>If (Amount__c &gt; 0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Greater Than Zero</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Order Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Currency__c</fullName>
        <formula>Event__r.Budget_Currency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cvent Orders Details</relationshipLabel>
        <relationshipName>Cvent_Orders_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Converted_To_Journal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted To Journal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_General_Ledger_Account__c</fullName>
        <formula>If ( Product_Type__c = &quot;Session&quot;, &quot;249200 Def Rev Offsites&quot;, &quot;249000 - Def Rev Registration&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit General Ledger Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Formula__c</fullName>
        <formula>TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cvent_Identifier__c</fullName>
        <description>combination of order id and orderdetail id.</description>
        <externalId>true</externalId>
        <label>Cvent Identifier</label>
        <length>108</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Debit_General_Ledger_Account__c</fullName>
        <formula>If ( Product_Type__c = &quot;Session&quot;, &quot;249900 - Def Rev - Event Revenue Clearing&quot;, &quot;249900 - Def Rev - Event Revenue Clearing&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Debit General Ledger Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Portfolios__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Portfolios</label>
        <referenceTo>Event_Portfolios__c</referenceTo>
        <relationshipLabel>Cvent Orders Details</relationshipLabel>
        <relationshipName>Cvent_Orders_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Cvent Orders Details</relationshipLabel>
        <relationshipName>Cvent_Orders_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Journal_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal Number</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Cvent Orders Details</relationshipLabel>
        <relationshipName>Cvent_Orders_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Detail_ID__c</fullName>
        <label>Order Detail ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Detail_Item_Id__c</fullName>
        <label>Order Detail Item  Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Participant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passthrough_Formula__c</fullName>
        <formula>If (Passthrough__c&lt;&gt;&quot;Yes&quot;, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passthrough Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passthrough_No_Amount_Greater_Than_0__c</fullName>
        <formula>If ( Passthrough_Formula__c = True &amp;&amp;  Amount_Greater_Than_Zero__c = 1, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passthrough No &amp; Amount Greater Than 0</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passthrough__c</fullName>
        <formula>TEXT(Event__r.Passthrough__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Passthrough</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <label>Product ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_Currency__c</fullName>
        <formula>Event__r.Registration_Currency_Mapping__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Cvent Order Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Order Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cvent Orders Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>